--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -1,115 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>TravelBloom</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
+      background-image: url("./assets/holiday.avif");
       background-size: cover;
     }
 
     nav {
-      background: rgba(0,0,0,0.7);
-      padding: 10px;
+      background-color: rgba(0, 0, 0, 0.7);
       color: white;
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      padding: 10px;
       flex-wrap: wrap;
     }
 
-    nav .links a {
+    .nav-links a {
       color: white;
-      margin: 0 10px;
       text-decoration: none;
+      margin-right: 15px;
     }
 
-    .search-group {
-      display: flex;
-      gap: 10px;
-      margin-top: 10px;
+    .search-controls input, .search-controls button {
+      margin: 5px;
+      padding: 6px;
     }
 
-    .search-group input {
-      padding: 5px;
-    }
-
-    .section {
+    section {
       padding: 20px;
-      background-color: rgba(255, 255, 255, 0.8);
+      background-color: rgba(255,255,255,0.9);
     }
 
     #results img {
       width: 300px;
       height: auto;
+      margin-top: 10px;
     }
 
-    .team-member {
+    .result-block {
+      margin-bottom: 20px;
+    }
+
+    form input, form textarea {
+      display: block;
+      width: 300px;
       margin-bottom: 10px;
+      padding: 8px;
     }
   </style>
 </head>
 <body>
 
+  <!-- Navigation -->
   <nav>
-    <div class="links">
+    <div class="nav-links">
       <a href="#home">Home</a>
       <a href="#about">About Us</a>
       <a href="#contact">Contact Us</a>
     </div>
-    <div class="search-group">
-      <input type="text" id="searchInput" placeholder="Search for places...">
+    <div class="search-controls">
+      <input type="text" id="searchInput" placeholder="Search for beach, temple or country">
       <button onclick="searchPlaces()">Search</button>
       <button onclick="clearResults()">Reset</button>
     </div>
   </nav>
 
-  <div id="home" class="section">
+  <!-- Home -->
+  <section id="home">
     <h1>Welcome to TravelBloom</h1>
-    <p>Discover amazing travel destinations across the globe!</p>
-    <p>Explore beaches, temples, and beautiful countries curated just for you.</p>
+    <p>Explore curated travel destinations for beaches, temples, and countries around the world!</p>
     <div>
-      <a href="#"><img src="facebook.png" alt="Facebook" width="30"></a>
-      <a href="#"><img src="instagram.png" alt="Instagram" width="30"></a>
-      <a href="#"><img src="twitter.png" alt="Twitter" width="30"></a>
+      <a href="#"><img src="./assets/facebook.png" width="24" alt="Facebook"></a>
+      <a href="#"><img src="./assets/instagram.jpg" width="24" alt="Instagram"></a>
+      <a href="#"><img src="./assets/twitter.png" width="24" alt="Twitter"></a>
     </div>
-  </div>
+  </section>
 
-  <div id="about" class="section">
+  <!-- About Us -->
+  <section id="about">
     <h2>About Us</h2>
-    <p>TravelBloom is dedicated to helping travelers discover new and exciting places across the globe.</p>
+    <p>TravelBloom is your personal travel guide built by passionate explorers and developers.</p>
     <h3>Our Team</h3>
-    <div class="team-member">
-      <strong>Alex Johnson</strong> - Founder & CEO
-    </div>
-    <div class="team-member">
-      <strong>Jamie Lee</strong> - Travel Expert
-    </div>
-    <div class="team-member">
-      <strong>Pat Smith</strong> - Web Developer
-    </div>
-  </div>
+    <p><strong>Jane Doe</strong> – Project Manager</p>
+    <p><strong>John Smith</strong> – Full Stack Developer</p>
+    <p><strong>Emily White</strong> – Travel Curator</p>
+  </section>
 
-  <div id="contact" class="section">
+  <!-- Contact Us -->
+  <section id="contact">
     <h2>Contact Us</h2>
     <form onsubmit="event.preventDefault(); alert('Message submitted!');">
-      <label>Name:</label><br>
-      <input type="text" required><br>
-      <label>Email:</label><br>
-      <input type="email" required><br>
-      <label>Message:</label><br>
-      <textarea rows="5" cols="30" required></textarea><br><br>
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea rows="5" placeholder="Your Message" required></textarea>
       <button type="submit">Submit</button>
     </form>
-  </div>
+  </section>
 
-  <div id="results" class="section">
+  <!-- Results -->
+  <section id="results">
     <h2>Recommendations</h2>
     <div id="recommendationResults"></div>
-  </div>
+  </section>
 
   <script src="travel-recommendation.js"></script>
 </body>
